--- a/src/components/todo-list-item/todo-list-item.css
+++ b/src/components/todo-list-item/todo-list-item.css
@@ -16,6 +16,7 @@
   
   .todo-list-item.done .todo-list-item-label {
     text-decoration: line-through;
+    color: gray;
   }
   
   .todo-list-item.important .todo-list-item-label {
