--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,5 +1,5 @@
 .todo-app {
-    margin: 2rem auto 0 auto;
+    margin: 3rem auto 0 auto;
     max-width: 500px;
   }
   
@@ -7,5 +7,6 @@
     margin: 1rem 0;
   } 
   body {
-    background-color: #e7fafa;
+    background-image: url(img.jpg);
+    background-size: cover; 
   }
