--- a/src/components/app-header/app-header.css
+++ b/src/components/app-header/app-header.css
@@ -12,6 +12,7 @@
   }
   h1 {
     color:  #00cccc;
-    text-shadow: 1px 1px 2px black, 0 0 2em #6c757d;
+    font-size: 3rem;
+    text-shadow: 2px 2px 3px black, 0 0 2em #6c757d;
   }
   
